test/errors/redef.compopts
--detailed-errors # redef-detailed.good
--no-detailed-errors # redef-brief.good
